// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/radio/demo/badge.tsx correctly 1`] = `
<div
  class="ant-radio-group ant-radio-group-solid"
>
  <span
    class="ant-badge"
  >
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="1"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Click Me
      </span>
    </label>
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="1"
    >
      <bdi>
        <span
          class="ant-scroll-number-only"
          style="transition:none"
        >
          <span
            class="ant-scroll-number-only-unit current"
          >
            1
          </span>
        </span>
      </bdi>
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="2"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Not Me
      </span>
    </label>
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="2"
    >
      <bdi>
        <span
          class="ant-scroll-number-only"
          style="transition:none"
        >
          <span
            class="ant-scroll-number-only-unit current"
          >
            2
          </span>
        </span>
      </bdi>
    </sup>
  </span>
</div>
`;

exports[`renders components/radio/demo/basic.tsx correctly 1`] = `
<label
  class="ant-radio-wrapper"
>
  <span
    class="ant-radio ant-wave-target"
  >
    <input
      class="ant-radio-input"
      type="radio"
    />
    <span
      class="ant-radio-inner"
    />
  </span>
  <span>
    Radio
  </span>
</label>
`;

exports[`renders components/radio/demo/component-token.tsx correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
>
  <div
    class="ant-space-item"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Test
      </span>
    </label>
  </div>
  <div
    class="ant-space-item"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-disabled"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked ant-radio-disabled"
      >
        <input
          checked=""
          class="ant-radio-input"
          disabled=""
          type="radio"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Disabled
      </span>
    </label>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-radio-group ant-radio-group-outline"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-radio-group ant-radio-group-outline"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-disabled"
      >
        <span
          class="ant-radio-button ant-radio-button-checked ant-radio-button-disabled"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            disabled=""
            type="radio"
            value="a"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
      >
        <span
          class="ant-radio-button ant-radio-button-disabled"
        >
          <input
            class="ant-radio-button-input"
            disabled=""
            type="radio"
            value="b"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
      >
        <span
          class="ant-radio-button ant-radio-button-disabled"
        >
          <input
            class="ant-radio-button-input"
            disabled=""
            type="radio"
            value="c"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
      >
        <span
          class="ant-radio-button ant-radio-button-disabled"
        >
          <input
            class="ant-radio-button-input"
            disabled=""
            type="radio"
            value="d"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-radio-group ant-radio-group-solid"
    >
      <label
        class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
      >
        <span
          class="ant-radio-button ant-radio-button-checked"
        >
          <input
            checked=""
            class="ant-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="ant-radio-button-wrapper"
      >
        <span
          class="ant-radio-button"
        >
          <input
            class="ant-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="ant-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders components/radio/demo/disabled.tsx correctly 1`] = `
Array [
  <label
    class="ant-radio-wrapper ant-radio-wrapper-disabled"
  >
    <span
      class="ant-radio ant-wave-target ant-radio-disabled"
    >
      <input
        class="ant-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>,
  <label
    class="ant-radio-wrapper ant-radio-wrapper-disabled"
  >
    <span
      class="ant-radio ant-wave-target ant-radio-checked ant-radio-disabled"
    >
      <input
        checked=""
        class="ant-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>,
  <br />,
  <button
    class="ant-btn ant-btn-primary"
    style="margin-top:16px"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>,
]
`;

exports[`renders components/radio/demo/radiobutton.tsx correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-top:16px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ant-radio-button ant-radio-button-disabled"
      >
        <input
          class="ant-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-top:16px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-disabled"
    >
      <span
        class="ant-radio-button ant-radio-button-checked ant-radio-button-disabled"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          disabled=""
          type="radio"
          value="a"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ant-radio-button ant-radio-button-disabled"
      >
        <input
          class="ant-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ant-radio-button ant-radio-button-disabled"
      >
        <input
          class="ant-radio-button-input"
          disabled=""
          type="radio"
          value="c"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ant-radio-button ant-radio-button-disabled"
      >
        <input
          class="ant-radio-button-input"
          disabled=""
          type="radio"
          value="d"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
]
`;

exports[`renders components/radio/demo/radiobutton-solid.tsx correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-solid"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="ant-radio-group ant-radio-group-solid"
    style="margin-top:16px"
  >
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ant-radio-button ant-radio-button-disabled"
      >
        <input
          class="ant-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
]
`;

exports[`renders components/radio/demo/radiogroup.tsx correctly 1`] = `
<div
  class="ant-radio-group ant-radio-group-outline"
>
  <label
    class="ant-radio-wrapper ant-radio-wrapper-checked"
  >
    <span
      class="ant-radio ant-wave-target ant-radio-checked"
    >
      <input
        checked=""
        class="ant-radio-input"
        type="radio"
        value="1"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio ant-wave-target"
    >
      <input
        class="ant-radio-input"
        type="radio"
        value="2"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio ant-wave-target"
    >
      <input
        class="ant-radio-input"
        type="radio"
        value="3"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio ant-wave-target"
    >
      <input
        class="ant-radio-input"
        type="radio"
        value="4"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders components/radio/demo/radiogroup-more.tsx correctly 1`] = `
<div
  class="ant-radio-group ant-radio-group-outline"
>
  <div
    class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
  >
    <div
      class="ant-space-item"
    >
      <label
        class="ant-radio-wrapper ant-radio-wrapper-checked"
      >
        <span
          class="ant-radio ant-wave-target ant-radio-checked"
        >
          <input
            checked=""
            class="ant-radio-input"
            type="radio"
            value="1"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          Option A
        </span>
      </label>
    </div>
    <div
      class="ant-space-item"
    >
      <label
        class="ant-radio-wrapper"
      >
        <span
          class="ant-radio ant-wave-target"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="2"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          Option B
        </span>
      </label>
    </div>
    <div
      class="ant-space-item"
    >
      <label
        class="ant-radio-wrapper"
      >
        <span
          class="ant-radio ant-wave-target"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="3"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          Option C
        </span>
      </label>
    </div>
    <div
      class="ant-space-item"
    >
      <label
        class="ant-radio-wrapper"
      >
        <span
          class="ant-radio ant-wave-target"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="4"
          />
          <span
            class="ant-radio-inner"
          />
        </span>
        <span>
          More...
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders components/radio/demo/radiogroup-options.tsx correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ant-radio-wrapper ant-radio-wrapper-disabled"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-disabled"
      >
        <input
          class="ant-radio-input"
          disabled=""
          type="radio"
          value="Orange"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="Apple"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="Pear"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="Orange"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-radio-group ant-radio-group-solid"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="Apple"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="Pear"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ant-radio-button ant-radio-button-disabled"
      >
        <input
          class="ant-radio-button-input"
          disabled=""
          type="radio"
          value="Orange"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
]
`;

exports[`renders components/radio/demo/radiogroup-with-name.tsx correctly 1`] = `
<div
  class="ant-radio-group ant-radio-group-outline"
>
  <label
    class="ant-radio-wrapper ant-radio-wrapper-checked"
  >
    <span
      class="ant-radio ant-wave-target ant-radio-checked"
    >
      <input
        checked=""
        class="ant-radio-input"
        name="radiogroup"
        type="radio"
        value="1"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio ant-wave-target"
    >
      <input
        class="ant-radio-input"
        name="radiogroup"
        type="radio"
        value="2"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio ant-wave-target"
    >
      <input
        class="ant-radio-input"
        name="radiogroup"
        type="radio"
        value="3"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="ant-radio-wrapper"
  >
    <span
      class="ant-radio ant-wave-target"
    >
      <input
        class="ant-radio-input"
        name="radiogroup"
        type="radio"
        value="4"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders components/radio/demo/size.tsx correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline ant-radio-group-large"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-top:16px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
    style="margin-top:16px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
]
`;

exports[`renders components/radio/demo/wireframe.tsx correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="1"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        A
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="2"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        B
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="3"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        C
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="4"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        D
      </span>
    </label>
  </div>,
  <br />,
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-disabled"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked ant-radio-disabled"
      >
        <input
          checked=""
          class="ant-radio-input"
          disabled=""
          type="radio"
          value="1"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        A
      </span>
    </label>
    <label
      class="ant-radio-wrapper ant-radio-wrapper-disabled"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-disabled"
      >
        <input
          class="ant-radio-input"
          disabled=""
          type="radio"
          value="2"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        B
      </span>
    </label>
    <label
      class="ant-radio-wrapper ant-radio-wrapper-disabled"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-disabled"
      >
        <input
          class="ant-radio-input"
          disabled=""
          type="radio"
          value="3"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        C
      </span>
    </label>
    <label
      class="ant-radio-wrapper ant-radio-wrapper-disabled"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-disabled"
      >
        <input
          class="ant-radio-input"
          disabled=""
          type="radio"
          value="4"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        D
      </span>
    </label>
  </div>,
]
`;
